Fix alignment issues on beach page

--- a/src/components/BeachPage/BeachInfo/styles.module.css
+++ b/src/components/BeachPage/BeachInfo/styles.module.css
@@ -17,7 +17,7 @@
 }
 
 .entryMap {
-    margin: 16px;
+    margin: 24px;
     border-radius: 8px;
     height: 240px;
     background-size: cover;
